saves/test/demo_full_20240802_193545/norgate/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp norgate_tb.v norgate.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
norgate_tb.v:46: $finish called at 4000 (1ps)

iverilog cmd 2 error:

